# meshscript

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
dlib/: CMakeLists.txt
hdf5/: CMakeLists.txt
hdf5/src/: H5Edefin.h  H5Einit.h  H5Epubgen.h  H5Eterm.h
icp/: icp.cpp  icp.h  icp_point_to_plane.cpp  icp_point_to_plane.h  icp_point_to_point.cpp  icp_point_to_point.h  point_tree.h
libcork/: CMakeLists.txt  COPYRIGHT  aabvh.h  cork.cpp  cork.h  fixint.h  fixisct.h  ga4.h  isct.h  libcork_api.h  quantization.h  triangle.c  triangle.h  union_find.h
libpoisson/: CMakeLists.txt  libpoisson_api.h  poisson_reconstruction_screened.cpp  poisson_reconstruction_screened.h
libpoisson/poisson_screened/: PlyVertexMini.h  license.txt
meshscript/: CMakeLists.txt  canvas.cpp  canvas.h  db.cpp  db.h  deform_tool.cpp  deform_tool.h  distance_map.cpp  distance_map.h  ear_detector.cpp  ear_detector.h  face_detector.cpp  face_detector.h  fill_holes.cpp  fill_holes.h  hashed_heap.h  hdf5aux.h  im.cpp  im.h  io.cpp  io.h  jet.cpp  jet.h  lscm.cpp  lscm.h  main.cpp  matcap.cpp  matcap.h  mesh.cpp  mesh.h  meshscript.rc  mm.cpp  mm.h  morphable_model.h  mouse.h  objects.h  pc.cpp  pc.h  pixel.cpp  pixel.h  (+11 more)
meshscript/data/: ear_detector.svm
ply/: ply.h  plyfile.c  rply.c
